# mnist-pytorch

./: pyproject.toml  script.py
mnist_pytorch/: __init__.py  io.py  network.py  train.py
