[tool.poetry]
name = "mnist_pytorch"
version = "0.1.0"
description = "This codes are derived from https://www.kaggle.com/ateplyuk/mnist-pytorch-starter"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.3"
pandas = "^0.25.3"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
python-language-server = "^0.31.1"
pyls-black = "^0.4.4"
pyls-isort = "^0.1.1"
pyls-mypy = "^0.1.8"
pytest-black = "^0.3.7"
pytest-mypy = "^0.4.2"
kaggle-kernel-tool = "^0.1.2"

[tool.kkt.meta_data]
slug = "mnist-pytorch-derived"
competition = "digit-recognizer"
is_private = false
enable_gpu = true
code_file = "script.py"
enable_internet = false
dataset_sources = []
kernel_data_sources = []
competition_sources = ["digit-recognizer"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
